<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vamo de Bus!</string>
    <string name="app_short_name">VDB!</string>
    
    <string name="adpremium_noads_label_facebook">Facebook</string>
    <string name="adpremium_noads_label_twitter">Twitter</string>
    <string name="adpremium_noads_label_web">Web</string>
    <string name="adpremium_noads_link_facebook">www.facebook.com/vamodebus</string>
    <string name="adpremium_noads_link_twitter">www.twitter.com/vamodebus</string>
    <string name="adpremium_noads_link_web">www.vamodebus.com.br</string>
    
    <string name="search_list_lastused">Últimas Consultas:</string>
    <string name="search_list_mostused">Mais Utilizadas:</string>
    <string name="list_route_available_results">Rotas disponíveis:</string>
 
    <string name="where_is_the_bus_query">Linha:</string>
    
    <string name="config_label_helppers_available">Assistetes de Pesquisa disponíveis:</string>
    <string name="config_radio_label_history">Últimas rotas pesquisadas</string>
    <string name="config_radio_label_favorites">Mais pesquisadas</string>
    <string name="config_button_label_cleandata">Limpar Dados Pesquisa</string>
    <string name="config_msg_history">Assistente de Pesquisa Histórico foi ativado!</string>
    <string name="config_msg_favorites">Assistente de Pesquisa Mais Utilizadas foi ativado!</string>
    <string name="config_msg_cleandata">Dados de Pesquisa foram apagados com sucesso!</string>
    
    <string name="not_found">Dados indisponíveis</string>
    
    <string name="menu_settings">Configurações</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_help">Ajuda</string>
    
    <string name="help_title">Ajuda</string>
    <string name="help_info_1">Este aplicativo foi desenvolvido com intuito de auxiliar os usuários de ônibus da cidade de Uberlândia. </string>
    <string name="help_info_2">Para <b>buscar</b> a rota basta digitar o código da rota <b>(ex: T131)</b> ou parte do código <b>(ex: T)</b> e tocar no botão buscar <b>(lupa)</b>.</string>
    <string name="help_info_3">Conforme a informação passada no campo de busca irá aparecer uma lista contendo as linhas de ônibus com o código informado.</string>
    <string name="help_info_4">Para visualizar a localização do ônibus basta tocar sobre a linha desejada e aparecerá a lista com os pontos de ônibus pertencentes a linha selecionada indicando em qual dos pontos se encontram os ônibus em trânsito naquele exato momento.</string>
    
    <string name="about_title">Sobre</string>
    <string name="about_label_version">Versão:</string>
    <string name="about_value_version">-- versão --</string>
    <string name="about_label_name">Aplicativo:</string>
    <string name="about_value_name">-- nome --</string>
    <string name="about_label_package">Pacote:</string>
    <string name="about_value_package">-- pacote --</string>
    <string name="about_label_copyright_1">Copyright (c) 2013 Eduardo Silva Rosa</string>
    <string name="about_label_copyright_2">Copyright (c) 2013 Luis M. Reis, Matheus N. Mota.</string>
    <string name="about_label_copyright_3">Todos os direitos reservados.</string>
    <string name="about_label_company_title">Singular Ideas</string>
    <string name="about_label_company_url"><u>http://www.singularideas.com.br</u></string>
    <string name="about_label_company_email"><u>falecom@singularideas.com.br</u></string>
    <string name="about_label_company_pbx"><u>(34) 3221-7964</u></string>
    
    <string name="code_of_route">Linha: </string>
    <string name="find">Buscar</string>
    <string name="title_activity_main">Vamo de Bus!</string>
    <string name="rout_example">Ex:T131</string>
    <string name="title_activity_web">WebActivity</string>

    <string name="action_settings">Settings</string>

</resources>