<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_short_name"
        android:padding="15dp"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:src="@drawable/bar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/about_title"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:src="@drawable/bar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/about_label_name"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label_name"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_value_name"
                    android:layout_toRightOf="@+id/about_label_name"
                    android:layout_alignBaseline="@+id/about_label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/about_value_name"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/about_label_package"
                    android:layout_below="@+id/about_label_name"
                    android:layout_toLeftOf="@+id/about_value_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label_package"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_value_package"
                    android:layout_toRightOf="@+id/about_label_package"
                    android:layout_alignBaseline="@+id/about_label_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/about_value_package"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/about_label_version"
                    android:layout_below="@+id/about_label_package"
                    android:layout_toLeftOf="@+id/about_value_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label_version"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_value_version"
                    android:layout_toRightOf="@+id/about_label_version"
                    android:layout_alignBaseline="@+id/about_label_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/about_value_version"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/about_label_copyright_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/about_label_copyright_1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/about_label_copyright_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/about_label_copyright_2"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/about_label_copyright_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/about_label_copyright_3"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/about_label_company_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_label_company_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_label_company_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:onClick="callUrl"
                android:text="@string/about_label_company_url"
                android:textColor="@color/blue"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/about_label_company_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:onClick="callEmail"
                android:text="@string/about_label_company_email"
                android:textColor="@color/blue"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/about_label_company_pbx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:onClick="callPbx"
                android:text="@string/about_label_company_pbx"
                android:textColor="@color/blue"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adpremium_noads_link_facebook"
            android:onClick="callFaceBook"
            android:padding="5dip"
            android:src="@drawable/icon_s_facebook" />

        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adpremium_noads_link_twitter"
            android:onClick="callTwitter"
            android:padding="5dip"
            android:src="@drawable/icon_s_twitter" />

        <ImageView
            android:id="@+id/imgWev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/adpremium_noads_link_web"
            android:onClick="callSite"
            android:padding="5dip"
            android:src="@drawable/icon_s_site" />
    </LinearLayout>

</RelativeLayout>