<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		       
	    <android.widget.ImageView
	        android:id="@+id/logoApp"
	        android:src="@drawable/logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"/>
        
    </LinearLayout>
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imgFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_x_facebook"
            android:padding="5dip" android:contentDescription="@string/adpremium_noads_link_facebook"
            android:onClick="callFaceBook"/>
        
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_x_twitter"
                android:padding="5dip"
                android:contentDescription="@string/adpremium_noads_link_twitter"
                android:onClick="callTwitter"/>

     </LinearLayout>

    <LinearLayout
          android:orientation="horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_x_site"
                android:padding="5dip" android:contentDescription="@string/adpremium_noads_link_web"
                android:onClick="callSite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/socialLoadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
	    		       
    </LinearLayout>
    
</LinearLayout>